# claude-hive

./: .env.example  .gitignore  AGENTS.md  Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/board/: board-column.tsx  board.tsx  task-card.tsx  task-input.tsx
frontend/src/components/dialogs/: add-project-dialog.tsx  clone-repo-dialog.tsx  task-detail-dialog.tsx
frontend/src/components/layout/: header.tsx  sidebar.tsx
frontend/src/components/voice/: voice-button.tsx
frontend/src/context/: board-context.tsx
frontend/src/hooks/: use-board-sse.ts  use-polling.ts  use-voice-input.ts
frontend/src/lib/: api.ts  utils.ts
frontend/src/types/: index.ts  speech.d.ts
manager/: config.py  database.py  event_bus.py  main.py  models.py
manager/routers/: auth.py  projects.py  stream.py  system.py  tasks.py  workers.py
manager/services/: claude_runner.py  git_service.py  github_service.py  port_allocator.py  project_service.py  task_service.py  worker_orchestrator.py
manager/workers/: merge_strategy.py  test_runner.py  worker_loop.py  worktree_setup.py
static/: index.html  manifest.json
static/css/: styles.css
static/js/: api.js  app.js  board.js  sse-client.js  task-form.js  voice.js  worker-monitor.js
templates/: claude_md.template
