[project]
name = "claude-hive"
version = "0.1.0"
description = "Orchestrate multiple Claude Code instances working in parallel via git worktrees"
readme = {text = "", content-type = "text/markdown"}
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "aiosqlite>=0.20",
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
]

[project.scripts]
claude-hive = "manager.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["manager"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
